# Ztodo

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.hermes/plans/: llm-agent-architecture.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
src/components/: AIChat.tsx  SkillPanel.tsx  TaskInput.tsx  TaskItem.tsx  TaskList.tsx
src/lib/: tauri.ts
src/llm/: agent.ts  llmClient.ts  toolExecutor.ts  toolRegistry.ts
src/services/: skillService.ts  taskService.ts
src/types/: skill.ts  task.ts
