[package]
name = "ztodo"
version = "0.1.0"
description = "Ztodo - 简约待办事项"
authors = ["zzx02"]
edition = "2021"

[lib]
name = "ztodo_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
